--- a/index.html
+++ b/index.html
@@ -1,56 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>8uuug</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <h1> 自我介绍捏🤗 </h1>
-    <h2> John_8uuug </h2>
-    <img src="111.jpg" alt="我头像捏？" width="360px">
+    <h1>Nahz</h1>
+    <img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Ftp1.tupiankucdn.com%2Fgif%2Fs%2F2018%2Fefcb6383fef24fed9ac723850aa960e0.jpg&refer=http%3A%2F%2Ftp1.tupiankucdn.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=jpeg?sec=1648725295&t=9492bd4999381ae9be33fc1f70bf651e" width="200px">
     <hr>
-    <ol>
-        <li>性别：男的捏</li>
-        <li>爱好：打游戏捏</li>
-        <li>联系方式：(请不要联系我，好吗)</li>
-        <ul>
-            <li>电话：18003455667</li>
-            <li>qq：2763184070</li>
-            <li>邮箱：2763184070@qq.com</li>
-        </ul>
-    </ol>
+    <ul>
+        <li >10年王者</li>
+        <li>巅峰赛1800</li>
+        <li>国一李信</li>
+    </ul>
     <hr>
-    <h2>学历Education</h2>
-    <table>
+    <h3>我很喜欢英雄联盟里狄仁杰说的一句话：你的牌打的也忒好了！</h3>
+    <hr>
+    <h2>背景</h2>
+    <table cellspacing=10>
         <tr>
             <th>时间</th>
-            <th>学校</th>
+            <th>地点</th>
+            <th>职务</th>
         </tr>
         <tr>
-            <td>2020</td>
-            <td>上海对外经贸大学</td>
+            <td>1900-2000</td>
+            <td>果宝特工队</td>
+            <td>队长</td>
         </tr>
         <tr>
-            <td>2017</td>
-            <td>太行中学</td>
+            <td>2001-2005</td>
+            <td>恶霸三人组</td>
+            <td>蜘蛛侦探</td>
         </tr>
         <tr>
-            <td>2014</td>
-            <td>实验中学</td>
-        </tr>
-        <tr>
-            <td>2011</td>
-            <td>惠丰小学</td>
+            <td>2005-2010</td>
+            <td>苇名城</td>
+            <td>城主</td>
         </tr>
     </table>
-    <hr>
-    <h2>个人履历(暂无)</h2>
-
-
 </body>
-
 </html>
